--- a/projeto-atec-final/frontend/package.json
+++ b/projeto-atec-final/frontend/package.json
@@ -6,18 +6,20 @@
     "@react-oauth/google": "^0.13.4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.1",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.13.2",
-    "bootstrap": "^5.3.8",
+    "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "qrcode": "^1.5.4",
-    "react": "^19.2.3",
-    "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.2.3",
-    "react-hot-toast": "^2.6.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.12.0",
+    "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
