--- a/projeto-atec-final/server/package.json
+++ b/projeto-atec-final/server/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
+    "pdfmake": "^0.3.3",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0"
