--- a/projeto-atec-final/frontend/package.json
+++ b/projeto-atec-final/frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "pdfmake": "^0.3.3",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.5",
