--- a/projeto-atec-final/docker-compose.yml
+++ b/projeto-atec-final/docker-compose.yml
@@ -1,32 +1,19 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:15-alpine
-    restart: always
-    environment:
-      POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-root}
-      POSTGRES_DB: ${DB_NAME:-ATEC_HQ}
-    ports:
-      - "5432:5432"
-    volumes:
-      - db_data:/var/lib/postgresql/data
-
   backend:
     build: ./server
     restart: always
     ports:
-      - "3000:3000"
+      - "5000:5000"
     environment:
       DB_USER: ${DB_USER:-postgres}
       DB_PASSWORD: ${DB_PASSWORD:-root}
-      DB_HOST: db
+      DB_HOST: host.docker.internal
       DB_PORT: 5432
       DB_NAME: ${DB_NAME:-ATEC_HQ}
       JWT_SECRET: ${JWT_SECRET:-atec_hq_secret_key_2024}
-    depends_on:
-      - db
+      PORT: 5000
 
   frontend:
     build: ./frontend
@@ -35,6 +22,3 @@ services:
       - "80:80"
     depends_on:
       - backend
-
-volumes:
-  db_data:
