--- a/projeto-atec-final/docker-compose.yml
+++ b/projeto-atec-final/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       DB_PORT: 5432
       DB_NAME: ${DB_NAME:-ATEC_HQ}
       JWT_SECRET: ${JWT_SECRET:-atec_hq_secret_key_2024}
+      EMAIL_USER: ${EMAIL_USER}
+      EMAIL_PASS: ${EMAIL_PASS}
       PORT: 5000
 
   frontend:
