Fix issues with student schedule, evaluations, and PDF export

--- a/projeto-atec-final/docker-compose.yml
+++ b/projeto-atec-final/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       EMAIL_USER: ${EMAIL_USER}
       EMAIL_PASS: ${EMAIL_PASS}
       PORT: 5000
+    volumes:
+      - ./server/uploads:/app/uploads
 
   frontend:
     build: ./frontend
